# eco-runtime

./: .clang-format  .crag.json  .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  PLAN.md  Readme.md  STYLE.md  THEORY.md  accessor_issue.md  boot-test-fail-1.md  boot-test-fail-2.md  boot-test-fail-3.md  boot-test-fail-4.md  boot-test-fail-5.md  boot-test-fail-6.md  bootstrap-errors.md  bootstrap.md  call-generic-apply-wip.md  capt-param-missing-report.md  chat_20260120_204827.md  codegen-mlir-bugs.md  cpp-prof-fix-loop.md  cpp-prof-hints.md  crag_0.1.0_amd64.deb  e2e-test-fixes.md  e2e-test-tech-debt.md  elm-cov-file.csv  elm2llvm  entrypoint.sh  eol2-howto.md  install_claude.sh  invariants-report.md  io-refactor.md  kernel-impl.md  kernel-limits.md  mem-fix-loop.md  (+16 more)
eco-kernel-cpp/: CMakeLists.txt  elm.json
eco-kernel-cpp/src/Eco/: Console.elm  Env.elm  File.elm  Http.elm  MVar.elm  Process.elm  Runtime.elm
eco-kernel-cpp/src/eco/: Console.cpp  Console.hpp  ConsoleExports.cpp  Crash.cpp  CrashExports.cpp  Env.cpp  Env.hpp  EnvExports.cpp  ExportHelpers.hpp  File.cpp  File.hpp  FileExports.cpp  Http.cpp  HttpExports.cpp  KernelExports.h  KernelHelpers.hpp  MVar.cpp  MVar.hpp  MVarExports.cpp  Process.cpp  Process.hpp  ProcessExports.cpp  Runtime.cpp  Runtime.hpp  RuntimeExports.cpp
elm-kernel-cpp/: CMakeLists.txt  LIBRARY_DEPENDENCIES.md
elm-kernel-cpp/design_docs/: elm-kernel-functions-todo.md  extra_kernel_funcs.txt  missing_kernel_funcs.txt
elm-kernel-cpp/src/: EffectManagerRegistry.cpp  ExportHelpers.hpp  KernelExports.h
elm-kernel-cpp/src/browser/: Browser.cpp  Browser.hpp  BrowserExports.cpp
elm-kernel-cpp/src/bytes/: Bytes.cpp  Bytes.hpp  BytesExports.cpp
elm-kernel-cpp/src/core/: Basics.cpp  Basics.hpp  BasicsExports.cpp  Bitwise.cpp  Bitwise.hpp  BitwiseExports.cpp  Char.cpp  Char.hpp  CharExports.cpp  Debug.cpp  Debug.hpp  DebugExports.cpp  Debugger.cpp  Debugger.hpp  DebuggerExports.cpp  JsArray.cpp  JsArray.hpp  JsArrayExports.cpp  List.cpp  List.hpp  ListExports.cpp  Platform.cpp  Platform.hpp  PlatformExports.cpp  Process.cpp  Process.hpp  ProcessExports.cpp  Scheduler.cpp  Scheduler.hpp  SchedulerExports.cpp  String.cpp  String.hpp  StringExports.cpp  TaskEffectManager.cpp  Utils.cpp  Utils.hpp  UtilsExports.cpp
elm-kernel-cpp/src/file/: File.cpp  File.hpp  FileExports.cpp
elm-kernel-cpp/src/http/: Http.cpp  Http.hpp  HttpEffectManager.cpp  HttpExports.cpp
elm-kernel-cpp/src/json/: Json.cpp  Json.hpp  JsonExports.cpp
test/: AllocatorCommonTest.hpp  AllocatorTest.cpp  AllocatorTest.hpp  CMakeLists.txt  CompactionTest.cpp  CompactionTest.hpp  ElmE2ETestBase.hpp  ElmTest.cpp  ElmTest.hpp  GarbageCollectorTest.cpp  GarbageCollectorTest.hpp  HeapGenerators.cpp  HeapGenerators.hpp  HeapSnapshot.hpp  IsolatedTestRunner.hpp  NurserySpaceTest.cpp  NurserySpaceTest.hpp  OldGenSpaceTest.cpp  OldGenSpaceTest.hpp  TLABTest.cpp  TLABTest.hpp  TestHelpers.cpp  TestHelpers.hpp  TestSuite.hpp  allocator_test.cpp  allocator_test.hpp  generators.cpp  generators.hpp  heap_snapshot.hpp  main.cpp  object_pool_simple_test.cpp  object_pool_test.cpp
test/allocator/: AllocatorCommonTest.cpp  AllocatorCommonTest.hpp  AllocatorTest.cpp  AllocatorTest.hpp  BytesOpsTest.cpp  BytesOpsTest.hpp  ElmTest.cpp  ElmTest.hpp  HeapGenerators.cpp  HeapHelpersTest.cpp  HeapHelpersTest.hpp  HeapSnapshot.hpp  ListOpsTest.cpp  ListOpsTest.hpp  NurserySpaceTest.cpp  NurserySpaceTest.hpp  OldGenSpaceTest.cpp  OldGenSpaceTest.hpp  RuntimeExportsTest.cpp  RuntimeExportsTest.hpp  StringOpsTest.cpp  StringOpsTest.hpp  TestHelpers.cpp
test/bf-codegen/: BFCodegenTest.hpp  bf_alloc_basic.mlir  bf_alloc_large.mlir  bf_alloc_zero.mlir  bf_cursor_chain.mlir  bf_cursor_init.mlir  bf_cursor_mixed.mlir  bf_cursor_read_chain.mlir  bf_decode_encode_mixed.mlir  bf_decode_encode_u32_be.mlir  bf_decode_encode_u8.mlir  bf_decode_just.mlir  bf_decode_nothing.mlir  bf_endian_f32_verify.mlir  bf_endian_f64_verify.mlir  bf_endian_u16_verify.mlir  bf_endian_u32_verify.mlir  bf_integration_count_prefix.mlir  bf_integration_length_prefix.mlir  bf_integration_packet.mlir  bf_loop_decode_bounds_fail.mlir  bf_loop_decode_empty.mlir  bf_loop_decode_multiple.mlir  bf_loop_decode_nested.mlir  bf_loop_decode_single.mlir  bf_read_bytes.mlir  bf_read_bytes_empty.mlir  bf_read_f32_be.mlir  bf_read_f32_le.mlir  bf_read_f64_be.mlir  bf_read_f64_le.mlir  bf_read_i16_be.mlir  bf_read_i16_le.mlir  bf_read_i32_be.mlir  bf_read_i32_le.mlir  bf_read_i8.mlir  bf_read_i8_negative.mlir  bf_read_incomplete_f64.mlir  bf_read_incomplete_u32.mlir  bf_read_past_end.mlir  (+50 more)
test/codegen/: CodegenIsolatedTest.hpp  CodegenTest.hpp  TODO_NEW_TESTS_2.md  TODO_NEW_TESTS_3.md  TODO_NEW_TESTS_ROUND4.md  TODO_new_tests.txt  allocate_closure_funcptr.mlir  allocate_closure_large_arity.mlir  allocate_ctor_max_size.mlir  allocate_ctor_minimal.mlir  allocate_generic.mlir  allocate_lowlevel.mlir  allocate_needs_root.mlir  allocate_string_sizes.mlir  allocate_string_zero_size.mlir  arithmetic_bitwise.mlir  arithmetic_bitwise_identity.mlir  arithmetic_bitwise_shift_edge.mlir  arithmetic_cmp.mlir  arithmetic_float.mlir  arithmetic_float_cmp_nan.mlir  arithmetic_float_conversion_edge.mlir  arithmetic_float_infinity.mlir  arithmetic_float_minmax_special.mlir  arithmetic_float_nan.mlir  arithmetic_int.mlir  arithmetic_int_minmax.mlir  arithmetic_int_overflow.mlir  arithmetic_modby_negative.mlir  arithmetic_pow_edge.mlir  arithmetic_remainderby_edge.mlir  bool_and.mlir  bool_demorgan.mlir  bool_not.mlir  bool_or.mlir  bool_xor.mlir  box_bool_values.mlir  box_char_unicode.mlir  box_float_special.mlir  box_int_range.mlir  (+222 more)
test/elm/: .gitignore  ElmTest.hpp  temp_string_test.elm
test/elm-bytes/: .gitignore  ElmBytesTest.hpp  elm.json
test/elm-core/: ElmCoreTest.hpp
test/elm-http/: .gitignore  ElmHttpTest.hpp  elm.json
test/elm-json/: ElmJsonTest.hpp  elm.json
test/elm-regex/: ElmRegexTest.hpp  elm.json
test/elm-time/: ElmTimeTest.hpp  elm.json
test/elm-url/: ElmUrlTest.hpp  elm.json
test/elm/plans/: big_fix.md  (+7 more)
(+1936 files in other folders)
